# qugui

./: .gitignore  Cargo.toml  README.md
examples/: basic.yml  gui.yml  screenshot.yml
src/: config.rs  gui.rs  handler.rs  main.rs
