[package]
name = "qugui"
version = "0.1.0"
authors = ["Jonas Bakken <jonasxb@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
glib = "0.9.3"
gtk = "0.8"
gio = "0.8"
log = "0.4"
env_logger = "0.7"

# [dependencies.gtk]
# version = "0.8"
# features = ["v3_16"]

# [dependencies.gio]
# version = ""
# features = ["v2_44"]
